--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="theme-color" content="#000000">
-	<!--
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -20,16 +20,49 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-	<title>Body Fat Guesser</title>
+  <title>Body Fat Guesser</title>
 </head>
 
 <body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-  <h1 id="title"></h1>
-	<div id="root"></div>
-	<!--
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div class="main">
+    <div class="landing">
+      <div id="top_part">
+        <a id="home_icon" href="/">
+          <img src="./img/logo.png">
+        </a>
+      </div>
+      <div id="landing_card">
+        <div id="landing_card_left_half">
+          <div class="landing_card_title_group">
+            <p id="landing_card_title"><strong>1500+</strong> samples,<br><i>backed by <strong>5000+</strong> fitness
+                fanatics</i></p>
+            <p id="landing_card_description">an open-source tool, using publicly available data, <br>designed to
+              estimate your body fat percentage</p>
+          </div>
+          <!-- <a id="cta" href="detector" title="Get an estimate">Get an estimate</a> -->
+        </div>
+        <div id="landing_card_right_half">
+          <!-- <span class="image_row">
+            <div class="image_in_square">
+              <img src="./img/4.png">
+              <img src="./img/3.png">
+            </div>
+          </span>
+          <span class="image_row">
+            <div class="image_in_square">
+              <img src="./img/2.png">
+              <img src="./img/1.jpg">
+            </div>
+          </span> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
