bug fixes for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0">
   <meta name="theme-color" content="#000000">
   <!--
       manifest.json provides metadata used when your web app is added to the
@@ -39,7 +39,7 @@
           <div class="landing_card_title_group">
             <p id="landing_card_title"><strong>1500+</strong> samples,<br><i>backed by <strong>5000+</strong> fitness
                 fanatics</i></p>
-            <p id="landing_card_description">an open-source tool, using publicly available data, <br>designed to
+            <p id="landing_card_description">an open-source tool, using publicly available data, designed to
               estimate your body fat percentage</p>
           </div>
           <!-- <a id="cta" href="detector" title="Get an estimate">Get an estimate</a> -->
