Add detection and view counter
- Clean some code
- Remove unnecesary files
- Remove db credentials
- Add db

--- a/public/index.html
+++ b/public/index.html
@@ -44,21 +44,10 @@
           </div>
           <!-- <a id="cta" href="detector" title="Get an estimate">Get an estimate</a> -->
         </div>
-        <div id="landing_card_right_half">
-          <!-- <span class="image_row">
-            <div class="image_in_square">
-              <img src="./img/4.png">
-              <img src="./img/3.png">
-            </div>
-          </span>
-          <span class="image_row">
-            <div class="image_in_square">
-              <img src="./img/2.png">
-              <img src="./img/1.jpg">
-            </div>
-          </span> -->
-        </div>
+        <div id="landing_card_right_half"></div>
       </div>
+      <div id="visitor_counter_wrapper"></div>
+      <div id="det_counter_wrapper"></div>
     </div>
   </div>
   <div id="root"></div>
