UI Changes + Adding Info Pages
Added more colors for multiple detections
Added info pages

--- a/public/index.html
+++ b/public/index.html
@@ -42,25 +42,23 @@
             <p id="landing_card_description">an open-source tool, using publicly available data, designed to
               estimate your body fat percentage</p>
           </div>
+          <div class="cta_wrapper"><a id="cta" href="learn_more.html" title="Learn more">Learn more</a></div>
+          <div class="cta_wrapper"><a id="cta" href="recommendations.html" title="Learn more">Recommendations</a></div>
+
           <!-- <a id="cta" href="detector" title="Get an estimate">Get an estimate</a> -->
         </div>
         <div id="landing_card_right_half"></div>
       </div>
+      <div class="cta_wrapper">
+        <a href="https://www.reddit.com/r/guessmybf/"><img id="reddit_logo" src="./img/reddit_logo2.png"></a><a href="https://www.reddit.com/r/guessmybf/">&nbsp;&nbsp; the inspiration!</a>
+      </div>
       <div id="visitor_counter_wrapper"></div>
       <div id="det_counter_wrapper"></div>
     </div>
+    
+
   </div>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
