--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   <title>Body Fat Guesser</title>
 </head>
 
@@ -42,10 +34,12 @@
             <p id="landing_card_description">an open-source tool, using publicly available data, designed to
               estimate your body fat percentage</p>
           </div>
-          <div class="cta_wrapper"><a id="cta" href="learn_more.html" title="Learn more">Learn more</a></div>
-          <div class="cta_wrapper"><a id="cta" href="recommendations.html" title="Learn more">Recommendations</a></div>
-
-          <!-- <a id="cta" href="detector" title="Get an estimate">Get an estimate</a> -->
+          <div class="cta_wrapper">
+            <a id="cta" href="learn_more.html" title="Learn more">Learn more</a>
+          </div>
+          <div class="cta_wrapper">
+            <a id="cta" href="recommendations.html" title="Recommendations">Recommendations</a>
+          </div>
         </div>
         <div id="landing_card_right_half"></div>
       </div>
@@ -55,10 +49,7 @@
       <div id="visitor_counter_wrapper"></div>
       <div id="det_counter_wrapper"></div>
     </div>
-    
-
   </div>
   <div id="root"></div>
 </body>
-
 </html>
