--- a/public/learn_more.html
+++ b/public/learn_more.html
@@ -14,7 +14,7 @@
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="learn.css" media="screen" />
 
-	<title>Body Fat Guesser: Recommendations</title>
+	<title>Body Fat Guesser: Learn more</title>
 </head>
 
 <body>
