Minor style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <div id="landing_card_right_half"></div>
       </div>
       <div class="cta_wrapper">
-        <a href="https://www.reddit.com/r/guessmybf/"><img id="reddit_logo" src="./img/reddit_logo2.png"></a><a href="https://www.reddit.com/r/guessmybf/">&nbsp;&nbsp; the inspiration!</a>
+        <a href="https://www.reddit.com/r/guessmybf/"><img alt="Reddit" id="reddit_logo" src="./img/reddit_logo2.png"></a><a href="https://www.reddit.com/r/guessmybf/"></a>
       </div>
       <div id="visitor_counter_wrapper"></div>
       <div id="det_counter_wrapper"></div>
