--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,11 @@
       <div id="landing_card">
         <div id="landing_card_left_half">
           <div class="landing_card_title_group">
-            <p id="landing_card_title"><strong>1500+</strong> samples,<br><i>backed by <strong>5000+</strong> fitness
-                fanatics</i></p>
-            <p id="landing_card_description">an open-source tool, using publicly available data, designed to
-              estimate your body fat percentage</p>
+            <p id="landing_card_title"><b>open source</b>, <i>from</i> <b>data</b> <i>to</i> <b>code</b></p>
+            <p id="landing_card_description">
+              body fat percentage readings, powered by AI
+            </p>
+            <p id="landing_card_description"></p>
           </div>
           <div class="cta_wrapper">
             <a id="cta" href="learn_more.html" title="Learn more">Learn more</a>
