Revamp website structure
Should probably look into version bumping and all that.

Major changes:
- Website structure.
	Static .html pages are now components.
	Finally "routered" the site, will make things easier.
	UI improvements.

Minor changes:
- Some typos in "recommended" and "learn more" sections.

--- a/public/index.html
+++ b/public/index.html
@@ -12,45 +12,14 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-  <title>Body Fat Guesser</title>
+  <title>Body Fat AIDet</title>
 </head>
 
 <body>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div class="main">
-    <div class="landing">
-      <div id="top_part">
-        <a id="home_icon" href="/">
-          <img src="./img/logo.png">
-        </a>
-      </div>
-      <div id="landing_card">
-        <div id="landing_card_left_half">
-          <div class="landing_card_title_group">
-            <p id="landing_card_title"><b>open source</b>, <i>from</i> <b>data</b> <i>to</i> <b>code</b></p>
-            <p id="landing_card_description">
-              body fat percentage readings, powered by AI
-            </p>
-            <p id="landing_card_description"></p>
-          </div>
-          <div class="cta_wrapper">
-            <a id="cta" href="learn_more.html" title="Learn more">Learn more</a>
-          </div>
-          <div class="cta_wrapper">
-            <a id="cta" href="recommendations.html" title="Recommendations">Recommendations</a>
-          </div>
-        </div>
-        <div id="landing_card_right_half"></div>
-      </div>
-      <div class="cta_wrapper">
-        <a href="https://www.reddit.com/r/guessmybf/"><img alt="Reddit" id="reddit_logo" src="./img/reddit_logo2.png"></a><a href="https://www.reddit.com/r/guessmybf/"></a>
-      </div>
-      <div id="visitor_counter_wrapper"></div>
-      <div id="det_counter_wrapper"></div>
-    </div>
-  </div>
+  <div class="main"></div>
   <div id="root"></div>
 </body>
 </html>
